--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Odin - Recipes</title>
 </head>
 <body>
-    
+    <Header>
+        <figure class="text-center">
+            <blockquote class="blockquote">
+                <h1>Odin Recipes</h1>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+                This is a <cite title="www.theodinproject.com">Odin Project</cite>
+            </figcaption>
+        </figure>
+    </Header>
+    <section>
+        <div class="card" style="width: 18rem;">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8626943.jpg&w=595&h=595&c=sc&poi=face&q=60" class="card-img-top" alt="garlic-shrimp-kabob">
+            <div class="card-body">
+              <h5 class="card-title">Garlic Shrimp Kabob</h5>
+              <p class="card-text">This is a quick and easy shrimp kabob recipe, perfect for beginners. Requires minimal ingredients, but is bursting with flavor. Serve over a bed of rice with fresh lemon wedges.</p>
+              <a href="#" class="btn btn-outline-dark">Let's Cook</a>
+            </div>
+          </div>
+    </section>
 </body>
 </html>
