--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </figcaption>
         </figure>
     </Header>
-    <section>
-        <div class="card" style="width: 18rem;">
+    <section style="margin-top: 50px;">
+        <div class="card" style="width: 20%; margin-left: 20px;">
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8626943.jpg&w=595&h=595&c=sc&poi=face&q=60" class="card-img-top" alt="garlic-shrimp-kabob">
             <div class="card-body">
               <h5 class="card-title">Garlic Shrimp Kabob</h5>
