Added Finnish summer soup recipe card to the homepage

--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
             </figcaption>
         </figure>
     </Header>
-    <section style="margin-top: 50px;">
+    <section class="d-flex justify-content-start" style="margin-top: 50px;">
         <div class="card" style="width: 20%; margin-left: 20px;">
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8626943.jpg&w=595&h=595&c=sc&poi=face&q=60" class="card-img-top" alt="garlic-shrimp-kabob">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6795468.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
             <div class="card-body">
               <h5 class="card-title">Garlic Shrimp Kabob</h5>
               <p class="card-text">This is a quick and easy shrimp kabob recipe, perfect for beginners. Requires minimal ingredients, but is bursting with flavor. Serve over a bed of rice with fresh lemon wedges.</p>
+              <a href="#" class="btn btn-outline-dark">Let's Cook</a>
+            </div>
+          </div>
+          <div class="card" style="width: 20%; margin-left: 20px;">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F08%2F10%2F14133_FinnishSummerSoup-MFS_MFS-WD-3x2-1-2000.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
+            <div class="card-body">
+              <h5 class="card-title">Finnish Summer Soup</h5>
+              <p class="card-text">This soup should be made with fresh vegetables. Serve with a bread and cheese platter as they do in Finland. If you can't get fresh shelled green peas, use frozen tiny green peas.</p>
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
