--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
+          <div class="card" style="width: 20%; margin-left: 20px;">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5310336.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
+            <div class="card-body">
+              <h5 class="card-title">Chimichurri Baked Chicken</h5>
+              <p class="card-text">Chimichurri is a dish from Argentina that is usually served over grilled chicken or steak. This is my version, which may or may not be authentic.</p>
+              <a href="#" class="btn btn-outline-dark">Let's Cook</a>
+            </div>
+          </div>
     </section>
 </body>
 </html>
