--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Odin - Recipes</title>
 </head>
 <body>
-    <Header>
+
+    <!--Header section start-->
+    <Header class="bg-secondary p-2 text-white bg-opacity-25" style="margin-top: 20px;">
         <figure class="text-center">
             <blockquote class="blockquote">
                 <h1>Odin Recipes</h1>
@@ -18,7 +20,11 @@
             </figcaption>
         </figure>
     </Header>
-    <section class="d-flex justify-content-start" style="margin-top: 50px;">
+    <!--Header section end-->
+
+    <section class="d-flex justify-content-start" style="margin-top: 50px;margin-left: auto; margin-right: auto;">
+
+        <!--Garlic shrimp kabob Recipe card-->
         <div class="card" style="width: 20%; margin-left: 20px;">
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6795468.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
             <div class="card-body">
@@ -27,6 +33,8 @@
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
+
+          <!--Finnish Summer soup Recipe card-->
           <div class="card" style="width: 20%; margin-left: 20px;">
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F08%2F10%2F14133_FinnishSummerSoup-MFS_MFS-WD-3x2-1-2000.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
             <div class="card-body">
@@ -35,6 +43,8 @@
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
+
+          <!--Chimichurri Baked Chicken Recipe card-->
           <div class="card" style="width: 20%; margin-left: 20px;">
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5310336.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
             <div class="card-body">
@@ -43,6 +53,7 @@
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
+
     </section>
 </body>
 </html>
