--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </Header>
     <!--Header section end-->
 
-    <section class="d-flex justify-content-start" style="margin-top: 50px;margin-left: auto; margin-right: auto;">
+    <section class="d-flex justify-content-center" style="margin-top: 50px;">
 
         <!--Garlic shrimp kabob Recipe card-->
         <div class="card" style="width: 20%; margin-left: 20px;">
@@ -36,7 +36,7 @@
 
           <!--Finnish Summer soup Recipe card-->
           <div class="card" style="width: 20%; margin-left: 20px;">
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F08%2F10%2F14133_FinnishSummerSoup-MFS_MFS-WD-3x2-1-2000.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F08%2F10%2F14133_FinnishSummerSoup-MFS_MFS-WD-3x2-1-2000.jpg" class="card-img-top" alt="finnish-summer-soup">
             <div class="card-body">
               <h5 class="card-title">Finnish Summer Soup</h5>
               <p class="card-text">This soup should be made with fresh vegetables. Serve with a bread and cheese platter as they do in Finland. If you can't get fresh shelled green peas, use frozen tiny green peas.</p>
@@ -46,13 +46,24 @@
 
           <!--Chimichurri Baked Chicken Recipe card-->
           <div class="card" style="width: 20%; margin-left: 20px;">
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5310336.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5310336.jpg" class="card-img-top" alt="Chimichurri-baked-chicken">
             <div class="card-body">
               <h5 class="card-title">Chimichurri Baked Chicken</h5>
               <p class="card-text">Chimichurri is a dish from Argentina that is usually served over grilled chicken or steak. This is my version, which may or may not be authentic.</p>
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
+
+          <!--Summer grilled pork chops-->
+          <div class="card" style="width: 20%; margin-left: 20px;">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4559332.jpg" class="card-img-top" alt="summer-grilled-pork-chops">
+            <div class="card-body">
+              <h5 class="card-title">Summer Grilled Pork Chops</h5>
+              <p class="card-text">This dish is what summer and grilling are all about...sweet honey-grilled pork chops are always an entertaining hit.</p>
+              <a href="#" class="btn btn-outline-dark">Let's Cook</a>
+            </div>
+          </div>
+
 
     </section>
 </body>
