--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!--Header section start-->
-    <Header class="bg-secondary p-2 text-white bg-opacity-25" style="margin-top: 20px;">
+    <Header class="bg-secondary p-2 text-dark bg-opacity-25" style="margin-top: 20px;">
         <figure class="text-center">
             <blockquote class="blockquote">
                 <h1>Odin Recipes</h1>
@@ -25,7 +25,7 @@
     <section class="d-flex justify-content-center" style="margin-top: 50px;">
 
         <!--Garlic shrimp kabob Recipe card-->
-        <div class="card" style="width: 20%; margin-left: 20px;">
+        <div class="card" style="width: 20%;">
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6795468.jpg" class="card-img-top" alt="garlic-shrimp-kabob">
             <div class="card-body">
               <h5 class="card-title">Garlic Shrimp Kabob</h5>
@@ -44,12 +44,12 @@
             </div>
           </div>
 
-          <!--Chimichurri Baked Chicken Recipe card-->
+          <!--Anthony's Chicken Recipe card-->
           <div class="card" style="width: 20%; margin-left: 20px;">
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5310336.jpg" class="card-img-top" alt="Chimichurri-baked-chicken">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F05%2F27%2FAnthonys-Chicken.jpeg" class="card-img-top" alt="anthony's-chicken">
             <div class="card-body">
-              <h5 class="card-title">Chimichurri Baked Chicken</h5>
-              <p class="card-text">Chimichurri is a dish from Argentina that is usually served over grilled chicken or steak. This is my version, which may or may not be authentic.</p>
+              <h5 class="card-title">Anthony's Chicken</h5>
+              <p class="card-text">Lightly breaded chicken breast covered with a honey mustard barbeque sauce containing chopped bacon, diced tomatoes and onions. This dish is baked over pasta topped with Monterey Jack cheese.</p>
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
