Added footer section with copyright information

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </Header>
     <!--Header section end-->
 
-    <section class="d-flex justify-content-center" style="margin-top: 50px;">
+    <section class="d-flex justify-content-center" style="margin-top: 50px; margin-bottom: 20px;">
 
         <!--Garlic shrimp kabob Recipe card-->
         <div class="card" style="width: 20%;">
@@ -49,7 +49,7 @@
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F05%2F27%2FAnthonys-Chicken.jpeg" class="card-img-top" alt="anthony's-chicken">
             <div class="card-body">
               <h5 class="card-title">Anthony's Chicken</h5>
-              <p class="card-text">Lightly breaded chicken breast covered with a honey mustard barbeque sauce containing chopped bacon, diced tomatoes and onions. This dish is baked over pasta topped with Monterey Jack cheese.</p>
+              <p class="card-text">Lightly breaded chicken breast covered with a honey mustard barbeque sauce containing chopped bacon, diced tomatoes and onions.</p>
               <a href="#" class="btn btn-outline-dark">Let's Cook</a>
             </div>
           </div>
@@ -66,5 +66,13 @@
 
 
     </section>
+
+    <!--Footer section start-->
+
+    <footer class="bg-secondary p-2 text-dark bg-opacity-25 d-flex justify-content-center">
+      <p>&copy; The Odin Project - Designed by <a href="https://navindusachintha.com" target="_blank">Navindu Sachintha</a></p>
+    </footer>
+
+    <!--Footer section end-->
 </body>
 </html>
