--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Odin - Recipes</title>
 </head>
-<body>
+<body class="p-2 bg-secondary bg-opacity-25">
 
     <!--Header section start-->
-    <Header class="bg-secondary p-2 text-dark bg-opacity-25" style="margin-top: 20px;">
+    <Header class="bg-secondary p-2 text-dark bg-opacity-25" style="">
         <figure class="text-center">
             <blockquote class="blockquote">
                 <h1>Odin Recipes</h1>
