--- a/recipes/shrimp-kabob.html
+++ b/recipes/shrimp-kabob.html
@@ -5,9 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://unpkg.com/feather-icons"></script>
     <title>Garlic Shrimp Kabob</title>
 </head>
-<body>
+<body class="p-3 mb-2 bg-secondary bg-opacity-25">
+    <Header class="bg-secondary bg-opacity-25 d-flex justify-content-start rounded" style="padding-top: 5px; padding-left: 3px;">
+        <a href="file:///home/navindu/repos/odin-recipes/index.html">
+            <i data-feather="arrow-left-circle"></i>
+            <script>
+                feather.replace()
+            </script>
+        </a>
+        <h4 style="margin-left: 5px;">Back to Home</h4>
+    </Header>
+    <h1 style="margin-top: 25px;"><strong>Garlic Shrimp Kabobs</strong></h1>
+    <section class="d-flex justify-content-start">
+        <img width="45%" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6795468.jpg" class="img-fluid img-thumbnail rounded" alt="...">
+        <div class="card" style="width: 18rem; margin-left: 10px;">
+            <div class="card-body">
+                <table class="table table-secondary table-striped">
+                    <thead>
+                        <tr>
+                          <th scope="col" colspan="2">Nutrition Facts <em>(per serving)</em></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Calories</td>
+                            <td>141</td>
+                        </tr>
+                        <tr>
+                            <td>Proteins</td>
+                            <td>12.4g</td>
+                        </tr>
+                        <tr>
+                            <td>Carbohydrates</td>
+                            <td>0.7g</td>
+                        </tr>
+                        <tr>
+                            <td>Fat</td>
+                            <td>9.7g</td>
+                        </tr>
+                        <tr>
+                            <td>Cholesterol</td>
+                            <td>115mg</td>
+                        </tr>
+                        <tr>
+                            <td>Sodium</td>
+                            <td>132.8mg</td>
+                        </tr>
+                    </tbody>
+                  </table>
+            </div>
+          </div>
+    </section>
     
 </body>
 </html>
