Added Description section to shrimp kabob page

--- a/recipes/shrimp-kabob.html
+++ b/recipes/shrimp-kabob.html
@@ -9,8 +9,9 @@
     <title>Garlic Shrimp Kabob</title>
 </head>
 <body class="p-3 mb-2 bg-secondary bg-opacity-25">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <Header class="bg-secondary bg-opacity-25 d-flex justify-content-start rounded" style="padding-top: 5px; padding-left: 3px;">
-        <a href="file:///home/navindu/repos/odin-recipes/index.html">
+        <a class="link-dark" href="file:///home/navindu/repos/odin-recipes/index.html">
             <i data-feather="arrow-left-circle"></i>
             <script>
                 feather.replace()
@@ -21,14 +22,13 @@
     <h1 style="margin-top: 25px;"><strong>Garlic Shrimp Kabobs</strong></h1>
     <section class="d-flex justify-content-start">
         <img width="45%" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6795468.jpg" class="img-fluid img-thumbnail rounded" alt="...">
-        <div class="card" style="width: 18rem; margin-left: 10px;">
+        <div class="card" style="margin-left: 10px;">
+            <div class="card-header">
+              <strong>Nutrition Facts </strong>(per serving)
+            </div>
             <div class="card-body">
                 <table class="table table-secondary table-striped">
-                    <thead>
-                        <tr>
-                          <th scope="col" colspan="2">Nutrition Facts <em>(per serving)</em></th>
-                        </tr>
-                    </thead>
+                    
                     <tbody>
                         <tr>
                             <td>Calories</td>
@@ -58,6 +58,12 @@
                   </table>
             </div>
           </div>
+    </section>
+    <section>
+
+        <h4><strong>Description</strong></h4>
+        <p style="width: 35%;">This is a quick and easy shrimp kabob recipe, perfect for beginners. Requires minimal ingredients, but is bursting with flavor. Serve over a bed of rice with fresh lemon wedges.</p>
+
     </section>
     
 </body>
