Added ingredients section in to shrimp kabob page

--- a/recipes/shrimp-kabob.html
+++ b/recipes/shrimp-kabob.html
@@ -65,6 +65,44 @@
         <p style="width: 35%;">This is a quick and easy shrimp kabob recipe, perfect for beginners. Requires minimal ingredients, but is bursting with flavor. Serve over a bed of rice with fresh lemon wedges.</p>
 
     </section>
+
+    <section>
+        <h4><strong>Ingredients</strong></h4>
+        <ul class="list-group" style="width: 35%;">
+            <li class="list-group-item">
+              <input class="form-check-input me-1" type="checkbox">
+              1 pound frozen shrimp, thawed and peeled
+            </li>
+            <li class="list-group-item">
+              <input class="form-check-input me-1" type="checkbox">
+              ¼ cup olive oil
+            </li>
+            <li class="list-group-item">
+              <input class="form-check-input me-1" type="checkbox">
+              1 tablespoon minced garlic
+            </li>
+            <li class="list-group-item">
+              <input class="form-check-input me-1" type="checkbox">
+              2 teaspoons lemon juice
+            </li>
+            <li class="list-group-item">
+              <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+              ¼ teaspoon pepper
+            </li>
+            <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                1 pinch finely chopped parsley
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                metal skewers
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                cooking spray
+              </li>
+          </ul>
+    </section>
     
 </body>
 </html>
