Added deirection section into shrimp kabob page

--- a/recipes/shrimp-kabob.html
+++ b/recipes/shrimp-kabob.html
@@ -66,9 +66,10 @@
 
     </section>
 
-    <section>
-        <h4><strong>Ingredients</strong></h4>
+    <section class="d-flex justify-content-start">
+        
         <ul class="list-group" style="width: 35%;">
+            <h4><strong>Ingredients</strong></h4>
             <li class="list-group-item">
               <input class="form-check-input me-1" type="checkbox">
               1 pound frozen shrimp, thawed and peeled
@@ -102,6 +103,32 @@
                 cooking spray
               </li>
           </ul>
+
+          <div style="width: 35%; margin-left: 35px;">
+              <h4 class="pb-2 border-bottom border-dark"><strong>Directions</strong></h4>  
+              <ol>
+                  <li>
+                      <strong><span>Step </span></strong>
+                      <p>Rinse & Dry shrimp</p>
+                  </li>
+                  <li>
+                    <strong><span>Step </span></strong>
+                    <p>Whisk olive oil, garlic, lemon juice, pepper, and parsley together in a bowl and pour into a large resealable plastic bag. Add shrimp, coat with the marinade, squeeze out excess air, and seal the bag. Marinate in the refrigerator for 2 hours.</p>
+                </li>
+                <li>
+                    <strong><span>Step </span></strong>
+                    <p>Preheat an outdoor grill for medium heat and lightly oil the grate. Lightly coat metal skewers with cooking spray.</p>
+                </li>
+                <li>
+                    <strong><span>Step </span></strong>
+                    <p>Remove shrimp from the marinade and shake off excess. Discard the remaining marinade. Place about 5 shrimp on each skewer.</p>
+                </li>
+                <li>
+                    <strong><span>Step </span></strong>
+                    <p>Cook on the preheated grill until shrimp are bright pink on the outside and the meat is opaque, about 5 minutes; do not overcook.</p>
+                </li>
+              </ol>
+          </div>
     </section>
     
 </body>
