Added comments to the shrimp kabob page for better understang

--- a/recipes/shrimp-kabob.html
+++ b/recipes/shrimp-kabob.html
@@ -10,6 +10,8 @@
 </head>
 <body class="p-3 mb-2 bg-secondary bg-opacity-25">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+    <!--Header section start-->
     <Header class="bg-secondary bg-opacity-25 d-flex justify-content-start rounded" style="padding-top: 5px; padding-left: 3px;">
         <a class="link-dark" href="file:///home/navindu/repos/odin-recipes/index.html">
             <i data-feather="arrow-left-circle"></i>
@@ -19,7 +21,11 @@
         </a>
         <h4 style="margin-left: 5px;">Back to Home</h4>
     </Header>
+    <!--Header section end-->
+
     <h1 style="margin-top: 25px;"><strong>Garlic Shrimp Kabobs</strong></h1>
+
+    <!--Hero section start-->
     <section class="d-flex justify-content-start">
         <img width="45%" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6795468.jpg" class="img-fluid img-thumbnail rounded" alt="...">
         <div class="card" style="margin-left: 10px;">
@@ -59,6 +65,9 @@
             </div>
           </div>
     </section>
+    <!--Hero section end-->
+
+    <!--Description section start-->
     <section>
 
         <h4><strong>Description</strong></h4>
@@ -130,6 +139,7 @@
               </ol>
           </div>
     </section>
+    <!--Description section end-->
 
     <!--Footer section start-->
 
