--- a/recipes/summer-grilled-pork-chops.html
+++ b/recipes/summer-grilled-pork-chops.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://unpkg.com/feather-icons"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summer Grilled Pork Chops</title>
 </head>
