--- a/recipes/anthonys-chicken.html
+++ b/recipes/anthonys-chicken.html
@@ -12,7 +12,7 @@
 
     <!--Header section start-->
     <Header class="bg-secondary bg-opacity-25 d-flex justify-content-start rounded" style="padding-top: 5px; padding-left: 3px;">
-        <a class="link-dark" href="https://github.com/navindu-sachintha/odin-recipes/blob/main/index.html">
+        <a class="link-dark" href="https://navindu-sachintha.github.io/odin-recipes/">
             <i data-feather="arrow-left-circle"></i>
             <script>
                 feather.replace()
