--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--Footer section start-->
 
     <footer class="bg-secondary p-2 text-dark bg-opacity-25 d-flex justify-content-center">
-      <p>&copy; The Odin Project - Designed by <a href="https://navindusachintha.com" target="_blank">Navindu Sachintha</a></p>
+      <p>&copy; </> with ❤️ by Navindu Sachintha for <a href="https://nsbm.ac.lk/">NSBM</a></p>
     </footer>
 
     <!--Footer section end-->
