--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Odin - Recipes</title>
+    <title>Let's Cook</title>
 </head>
 <body class="p-2 bg-secondary bg-opacity-25">
 
@@ -13,7 +13,7 @@
     <Header class="bg-secondary p-2 text-dark bg-opacity-25" style="">
         <figure class="text-center">
             <blockquote class="blockquote">
-                <h1>Odin Recipes</h1>
+                <h1>Recipes</h1>
             </blockquote>
             <figcaption class="blockquote-footer">
                 This is a <cite title="www.theodinproject.com">Odin Project</cite>
